Try fix for longpress on iphone

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 body {
 	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 	background-color: rgb(33, 127, 127);
+	-webkit-touch-callout: none;
 }
 
 h1 {
